# VoxelProject

./: .gitignore  BackgroundChunk.h  CMakeLists.txt  Chunk.cpp  Chunk.h  DAG.h  Edge.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  PoissonSampler.cpp  PoissonSampler.h  Primitives.h  README.md  Triangle.h  VerticalLine.cpp  VerticalLine.h  Voxels.cpp  Voxels.vcxproj  Voxels.vcxproj.filters  World.cpp  World.h
SDLProject/: Chunk.cpp  Chunk.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  SDLProject.cpp  SDLProject.vcxproj  SDLProject.vcxproj.filters  Vector3.h
SDLProject/Debug/: SDLProject.exe.recipe  SDLProject.ilk  chunk.obj.enc  vc143.idb
SDLProject/Debug/SDLProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDLProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SDLProject/x64/Debug/: vc143.idb
SDLProject/x64/Debug/SDLProject.tlog/: CL.command.1.tlog  SDLProject.lastbuildstate
